// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/index > getDjangoProsemirrorPlugins > should create menu bar with correct content structure 1`] = `
{
  "config": {
    "content": [
      [
        {
          "title": "Bold",
        },
        {
          "title": "Italic",
        },
      ],
      [
        {
          "title": "Heading",
        },
      ],
    ],
  },
  "type": "menuBar",
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should create menu bar with correct content structure 2`] = `
[
  [
    {
      "title": "Bold",
    },
    {
      "title": "Italic",
    },
  ],
  [
    {
      "title": "Heading",
    },
  ],
]
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include drop cursor plugin 1`] = `
{
  "type": "dropCursor",
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include gap cursor plugin 1`] = `
{
  "type": "gapCursor",
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include history plugin 1`] = `
{
  "type": "history",
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include input rules plugin 1`] = `
Plugin {
  "key": "plugin$1",
  "props": {
    "handleDOMEvents": {
      "compositionend": [Function],
    },
    "handleTextInput": [Function],
  },
  "spec": {
    "isInputRules": true,
    "props": {
      "handleDOMEvents": {
        "compositionend": [Function],
      },
      "handleTextInput": [Function],
    },
    "state": {
      "apply": [Function],
      "init": [Function],
    },
  },
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include menu bar plugin 1`] = `
{
  "config": {
    "content": [
      [
        {
          "title": "Bold",
        },
        {
          "title": "Italic",
        },
      ],
      [
        {
          "title": "Heading",
        },
      ],
    ],
  },
  "type": "menuBar",
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include table plugins 1`] = `
Plugin {
  "key": "floatingTableToolbar$",
  "props": {},
  "spec": {
    "key": PluginKey {
      "key": "floatingTableToolbar$",
    },
    "view": [Function],
  },
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include table plugins 2`] = `
Plugin {
  "key": "tableColumnResizing$",
  "props": {
    "attributes": [Function],
    "decorations": [Function],
    "handleDOMEvents": {
      "mousedown": [Function],
      "mouseleave": [Function],
      "mousemove": [Function],
    },
    "nodeViews": {},
  },
  "spec": {
    "key": PluginKey {
      "key": "tableColumnResizing$",
    },
    "props": {
      "attributes": [Function],
      "decorations": [Function],
      "handleDOMEvents": {
        "mousedown": [Function],
        "mouseleave": [Function],
        "mousemove": [Function],
      },
      "nodeViews": {},
    },
    "state": {
      "apply": [Function],
      "init": [Function],
    },
  },
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should include table plugins 3`] = `
Plugin {
  "key": "selectingCells$",
  "props": {
    "createSelectionBetween": [Function],
    "decorations": [Function],
    "handleDOMEvents": {
      "mousedown": [Function],
    },
    "handleKeyDown": [Function],
    "handlePaste": [Function],
    "handleTripleClick": [Function],
  },
  "spec": {
    "appendTransaction": [Function],
    "key": PluginKey {
      "key": "selectingCells$",
    },
    "props": {
      "createSelectionBetween": [Function],
      "decorations": [Function],
      "handleDOMEvents": {
        "mousedown": [Function],
      },
      "handleKeyDown": [Function],
      "handlePaste": [Function],
      "handleTripleClick": [Function],
    },
    "state": {
      "apply": [Function],
      "init": [Function],
    },
  },
}
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should pass default history setting when not specified 1`] = `
[
  Plugin {
    "key": "toolbar-plugin$",
    "props": {},
    "spec": {
      "key": PluginKey {
        "key": "toolbar-plugin$",
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  Plugin {
    "key": "plugin$9",
    "props": {
      "handleDOMEvents": {
        "compositionend": [Function],
      },
      "handleTextInput": [Function],
    },
    "spec": {
      "isInputRules": true,
      "props": {
        "handleDOMEvents": {
          "compositionend": [Function],
        },
        "handleTextInput": [Function],
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  {
    "keymap": {
      "Mod-b": "toggleStrong",
      "schema": {
        "marks": {
          "em": {
            "name": "em",
          },
          "strong": {
            "name": "strong",
          },
        },
        "nodes": {
          "doc": {
            "name": "doc",
          },
          "paragraph": {
            "name": "paragraph",
          },
          "text": {
            "name": "text",
          },
        },
      },
    },
    "type": "keymap",
  },
  {
    "keymap": {
      "Mod-y": "redo",
      "Mod-z": "undo",
    },
    "type": "keymap",
  },
  {
    "type": "dropCursor",
  },
  {
    "type": "gapCursor",
  },
  {
    "config": {
      "content": [
        [
          {
            "title": "Bold",
          },
          {
            "title": "Italic",
          },
        ],
        [
          {
            "title": "Heading",
          },
        ],
      ],
    },
    "type": "menuBar",
  },
  {
    "type": "history",
  },
]
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should pass settings to buildMenuItems 1`] = `
[
  Plugin {
    "key": "toolbar-plugin$",
    "props": {},
    "spec": {
      "key": PluginKey {
        "key": "toolbar-plugin$",
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  Plugin {
    "key": "plugin$8",
    "props": {
      "handleDOMEvents": {
        "compositionend": [Function],
      },
      "handleTextInput": [Function],
    },
    "spec": {
      "isInputRules": true,
      "props": {
        "handleDOMEvents": {
          "compositionend": [Function],
        },
        "handleTextInput": [Function],
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  {
    "keymap": {
      "Mod-b": "toggleStrong",
      "schema": {
        "marks": {
          "em": {
            "name": "em",
          },
          "strong": {
            "name": "strong",
          },
        },
        "nodes": {
          "doc": {
            "name": "doc",
          },
          "paragraph": {
            "name": "paragraph",
          },
          "text": {
            "name": "text",
          },
        },
      },
    },
    "type": "keymap",
  },
  {
    "keymap": {
      "Mod-y": "redo",
      "Mod-z": "undo",
    },
    "type": "keymap",
  },
  {
    "type": "dropCursor",
  },
  {
    "type": "gapCursor",
  },
  {
    "config": {
      "content": [
        [
          {
            "title": "Bold",
          },
          {
            "title": "Italic",
          },
        ],
        [
          {
            "title": "Heading",
          },
        ],
      ],
    },
    "type": "menuBar",
  },
  {
    "type": "history",
  },
]
`;

exports[`plugins/index > getDjangoProsemirrorPlugins > should return array of plugins with default settings 1`] = `
[
  Plugin {
    "key": "toolbar-plugin$",
    "props": {},
    "spec": {
      "key": PluginKey {
        "key": "toolbar-plugin$",
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  Plugin {
    "key": "plugin$",
    "props": {
      "handleDOMEvents": {
        "compositionend": [Function],
      },
      "handleTextInput": [Function],
    },
    "spec": {
      "isInputRules": true,
      "props": {
        "handleDOMEvents": {
          "compositionend": [Function],
        },
        "handleTextInput": [Function],
      },
      "state": {
        "apply": [Function],
        "init": [Function],
      },
    },
  },
  {
    "keymap": {
      "Mod-b": "toggleStrong",
      "schema": {
        "marks": {
          "em": {
            "name": "em",
          },
          "strong": {
            "name": "strong",
          },
        },
        "nodes": {
          "doc": {
            "name": "doc",
          },
          "paragraph": {
            "name": "paragraph",
          },
          "text": {
            "name": "text",
          },
        },
      },
    },
    "type": "keymap",
  },
  {
    "keymap": {
      "Mod-y": "redo",
      "Mod-z": "undo",
    },
    "type": "keymap",
  },
  {
    "type": "dropCursor",
  },
  {
    "type": "gapCursor",
  },
  {
    "config": {
      "content": [
        [
          {
            "title": "Bold",
          },
          {
            "title": "Italic",
          },
        ],
        [
          {
            "title": "Heading",
          },
        ],
      ],
    },
    "type": "menuBar",
  },
  {
    "type": "history",
  },
]
`;
